--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/apache/cordova-plugin-camera"
+    "url": "git@github.com:viig99/cordova-plugin-camera.git"
   },
   "bugs": {
     "url": "https://issues.apache.org/jira/browse/CB"
